[temp]: update actions to queried by group
