# session_rpcserver.go
@@ -733,6 +733,18 @@ func (s *sessionRpcServer) ListActions(_ context.Context,
 		if err != nil {
 			return nil, err
 		}
+	} else if req.GroupId != nil {
+		groupID, err := session.IDFromBytes(req.GroupId)
+		if err != nil {
+			return nil, err
+		}
+
+		actions, lastIndex, totalCount, err = db.ListGroupActions(
+			groupID, filterFn,
+		)
+		if err != nil {
+			return nil, err
+		}
 	} else {
 		actions, lastIndex, totalCount, err = db.ListActions(
 			filterFn, query,
